--- a/src/styles.scss
+++ b/src/styles.scss
@@ -144,6 +144,7 @@ hr {
     
         li {
             font-weight: 400;
+            line-height: 25px;
             margin: 0 0 10px 15px;
             position: relative;
     
@@ -154,7 +155,7 @@ hr {
                 border-radius: 50%;
                 margin-right: 15px;
                 position: absolute;
-                top: 8px;
+                top: 10px;
                 left: -15px;
                 width: 4px;
                 height: 4px;
