--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,7 @@
       <router-outlet></router-outlet>
     </div>
 
-    <!-- Top Button -->
-    <span class="top-button">
-      <i class="flecha fa fa-angle-up" aria-hidden="true"></i>
-    </span>
+    <app-top-button></app-top-button>
 
   </div>
 </div>
