[ Componente 'componentes' ] » Contenido actualizado

--- a/src/app/componentes/componentes/componentes.component.html
+++ b/src/app/componentes/componentes/componentes.component.html
@@ -118,9 +118,9 @@
   <hr>
 
   <ul>
-    <li>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto voluptatibus accusamus adipisci quibusdam totam placeat esse molestiae mollitia iure consectetur iste, sunt similique debitis eveniet neque commodi nisi illo beatae.
-    </li>
+    <li>Con editar nos referimos a cambiar el nombre o la ubicación de un componente</li>
+    <li>Podemos cambiar el nombre o la ubicación de un componente desde el editor de código, pero luego debemos cambiar la ruta de la importación en el fichero <i>app.module.ts</i></li>
+    <li>Podemos cambiar el identificador de la clase de un componente, pero luego debemos cambiar el identificador de dicha clase en la importación y en el campos <b>declarations</b> en el fichero <i>app.module.ts</i></li>
   </ul>
 
   <h3 id="renderizar-componente">5. Renderizar componente</h3>
