--- a/src/app/componentes/typescript/typescript.component.html
+++ b/src/app/componentes/typescript/typescript.component.html
@@ -300,16 +300,18 @@
     <li>¿Por qué los mensajes aparecen desordenados? Porque la promesa encierra código asíncrono (en este caso, la función <b>setTimeout()</b>)</li>
     <li>Esto significa que el código que se encuentre después de código asíncrono se ejecutará tanto si este último ha finalizado su ejecución como si no</li>
     <li>Claro, eso explica que el segundo mensaje en aparecer sea <i>Paso 2</i>, dado que la instrucción inherente a esta salida no esperó a que la promesa finalizara su ejecución</li>
-    <li>Tras esto, mientras se ejecuta el código que se encuentra dentro del cuerpo de la promesa (figura 26), no se espera a que la función <b>setTimeout()</b> finalice, sino que se ejecuta primero el código de la función <b>resolve()</b> tras ser invocada, lo que explica la salida <i>La ejecución finalizó sin errores</i> antes de la salida <i>Ejecución finalizada</i></li>
+    <li>Tras esto, mientras se ejecuta el código que se encuentra dentro del cuerpo de la promesa (figura 26), no se espera a que la función <b>setTimeout()</b> finalice</li>
+    <li>En su lugar ejecuta primero el código de la función <b>resolve()</b> tras ser invocada, lo que explica la salida <i>La ejecución finalizó sin errores</i> antes de la salida <i>Ejecución finalizada</i></li>
 
     <img src="assets/img/typescript/figura28.png" alt="">
     <caption><strong>Figura 28.</strong> Salida de la consola tras la ejecución del código de la figura 27</caption>
+  </ul>
 
-    <li>Es interesante saber que de haberse ejecutado la función <b>reject()</b>, la salida de la consola se hubiera ejecutado con el formato propio de un error (figura 29)</li>
+  <h3 id="interfaces">8. Interfaces</h3>
+  <hr>
 
-    <img src="assets/img/typescript/figura29.png" alt="">
-    <caption><strong>Figura 29.</strong> Salida de la función <b>reject()</b> por consola</caption>
-
+  <ul>
+    <li></li>
   </ul>
 
 </div>
